# delta-search

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
benches/: filter.rs  query.rs
examples/: simple.rs
src/: data.rs  fixtures.rs  index.rs  lib.rs  main.rs  query.rs  storage.rs
tests/: mod.rs
