[package]
name = "delta-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7.5" }
bimap = "0.6.3"
heed = "0.11.0"
indexmap = { version = "2.2.5", features = ["serde"] }
num-traits = "0.2.18"
ordered-float = { version = "4.0", features = ["serde"] }
pest = "2.7.9"
pest_derive = "2.7.9"
roaring = { version = "0.10.3", features = ["serde"] }
time = { version = "0.3.36", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0.60"
serde = { version = "1.0.200", features = ["derive"] }

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.115"
tokio-test = "0.4.4"

[features]
test-fixtures = []

[profile.bench]
lto = "thin"
debug = true

