[package]
name = "delta-search"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1" }
heed = "0.21.0"
indexmap = { version = "2.7.1", features = ["serde"] }
ordered-float = { version = "4.6", features = ["serde"] }
papaya = "0.1.8"
pest = "2.7.15"
pest_derive = "2.7.15"
roaring = { version = "0.10.10", features = ["serde"] }
time = { version = "0.3.37", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.137"
tokio-test = "0.4.4"

[features]
test-fixtures = []

[profile.bench]
lto = "thin"
debug = true
